@@ -230,10 +230,12 @@ NSecurityServer::TClusterResources TChunkOwnerBase::GetDiskUsage(const TDataStat
 {
     NSecurityServer::TClusterResources result;
     for (const auto& entry : Replication()) {
-        result.DiskSpace[entry.GetMediumIndex()] = CalculateDiskSpaceUsage(
-            entry.Policy().GetReplicationFactor(),
-            statistics.regular_disk_space(),
-            statistics.erasure_disk_space());
+        result.SetMediumDiskSpace(
+            entry.GetMediumIndex(),
+            CalculateDiskSpaceUsage(
+                entry.Policy().GetReplicationFactor(),
+                statistics.regular_disk_space(),
+                statistics.erasure_disk_space()));
     }
     result.ChunkCount = statistics.chunk_count();
     return result;
